# JuanOrellano-active-trace

./: .gitignore  AGENTS.md  CHANGES.md  docker-compose.yml  skills-lock.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/activia_trace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tenant.py  002_create_user.py  003_create_refresh_token.py  (+19 more)
backend/app/: main.py
backend/scripts/: seed_admin.py
backend/tests/: conftest.py  test_acknowledgment_aviso_repository.py  test_analisis_atrasados.py  test_analisis_monitor.py  test_analisis_ranking.py  test_analisis_reportes.py  test_app_startup.py  test_asignaciones.py  test_audit_log.py  test_auditoria_repository.py  test_auditoria_service.py  test_auth_deps.py  test_auth_service.py  test_aviso_repository.py  test_aviso_service.py  test_calificaciones_modelos.py  test_calificaciones_repository.py  test_calificaciones_router.py  test_calificaciones_service.py  test_calificaciones_tenant.py  test_coloquio_service.py  test_comentario_tarea_repository.py  test_comunicacion_repository.py  test_comunicacion_router.py  test_comunicacion_service.py  test_comunicacion_state_machine.py  test_comunicacion_template.py  test_comunicacion_tenant.py  test_comunicacion_worker.py  test_config.py  test_database.py  test_encryption.py  test_encuentro_service.py  test_equipo_service.py  test_equipos_api.py  test_equipos_repository.py  test_equipos_schemas.py  test_estructura_academica.py  test_evaluacion_repository.py  test_factura_repository.py  (+37 more)
(+485 files in other folders)
